# simulation-foundry-render

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
cmake/: build-presets.json  configure-presets.json  utils.cmake  workflow-presets.json
examples/opengl_triangle/: CMakeLists.txt  opengl_triangle.cpp
examples/vulkan_triangle/: CMakeLists.txt  vulkan_triangle.cpp
examples/vulkan_triangle/shaders/: vertex.vert
include/opengl/: shader.h
src/: CMakeLists.txt
src/opengl/: shader.cpp
